<resources>
    <string name="station">Stations</string>
    <string name="about_us">About us</string>
    <string name="app_name">Radio</string>
    <string name="category">Category</string>
    <string name="contact_us">Contact us</string>
    <string name="download">Download</string>
    <string name="favorite_is_empty">Favorite is empty</string>
    <string name="favorites">Favorites</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="name_demo">Demo Name</string>
    <string name="no_data_available">No Data Found</string>
    <string name="retry">Retry!</string>
    <string name="roboto_medium">sans-serif-medium</string>
    <string name="roboto_regular">sans-serif</string>
    <string name="share">Share</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="option_ok">OK</string>


    <!-- App Shortcuts -->
    <string name="shortcut_last_station_disabled_message">Shortcut for playback of last station disabled.</string>
    <string name="shortcut_last_station_long_label">Play last station</string>
    <string name="shortcut_last_station_short_label">Last station</string>


    <string name="no_internet_connection">No Internet Connection</string>
    <string name="_1_2k">1.2K</string>
    <string name="menu_report">Report an issue</string>
    <string name="menu_share">Share to friends</string>
    <string name="favorites_add">Add to favorite</string>


    <string name="app_version_name" translatable="false">\"Sweet\"</string>

    <!-- Accessibility Descriptions -->
    <string name="descr_app_icon">App icon depicting an old radio</string>
    <string name="descr_card_small_play_button">Play/stop</string>
    <string name="descr_card_starred_station">Starred station</string>
    <string name="descr_card_station_image_change">Change station image</string>
    <string name="descr_card_station_image">Station image</string>
    <string name="descr_expanded_player_metadata_copy_button">Copy the now playing information</string>
    <string name="descr_expanded_player_metadata_next_button">Next now playing metadata entry</string>
    <string name="descr_expanded_player_metadata_previous_button">Previous now playing metadata entry</string>
    <string name="descr_expanded_player_sleep_timer_cancel_button">Cancel sleep timer</string>
    <string name="descr_expanded_player_sleep_timer_remaining_time">Time remaining on sleep timer</string>
    <string name="descr_expanded_player_sleep_timer_start_button">Start sleep timer</string>
    <string name="descr_player_playback_button">Play/pause</string>
    <string name="descr_player_station_image">Station image</string>

    <!-- Dialogs -->
    <string name="dialog_add_station_title">Add Station</string>
    <string name="dialog_edit_station_name">Station name</string>
    <string name="dialog_edit_stream_uri">Stream address</string>
    <string name="dialog_error_message_default">An error occurred</string>
    <string name="dialog_error_message_no_network">Connect to the Internet.</string>
    <string name="dialog_error_title_no_network">Offline</string>
    <string name="dialog_find_station_button_add">Add</string>
    <string name="dialog_find_station_hint">Name or stream address</string>
    <string name="dialog_find_station_no_results">No results found.</string>
    <string name="dialog_find_station_title">Find Station</string>
    <string name="dialog_generic_button_cancel">Cancel</string>
    <string name="dialog_generic_button_okay">OK</string>
    <string name="dialog_generic_details_button">Show details</string>
    <string name="dialog_opml_import_details_default">No details available</string>
    <string name="dialog_restore_collection_replace_existing">Replace current collections of radio stations with the radio station from backup?</string>
    <string name="dialog_yes_no_message_remove_station">Remove this station?</string>
    <string name="dialog_yes_no_message_update_station_images">Download latest version of all station images?</string>
    <string name="dialog_yes_no_positive_button_default">Yes</string>
    <string name="dialog_yes_no_positive_button_remove_station">Remove</string>
    <string name="dialog_yes_no_positive_button_update_covers">Update</string>

    <!-- Fragment -->
    <string name="fragment_settings_title">Settings</string>

    <!-- Notification -->
    <string name="notification_now_playing_channel_name">Playback Controls</string>
    <string name="notification_play">Play</string>
    <string name="notification_stop">Stop</string>
    <string name="notification_skip_to_previous">Previous</string>
    <string name="notification_skip_to_next">Next</string>

    <!-- Onboarding -->
    <string name="onboarding_app_description">Immerse yourself in the sound of your choice!</string>
    <string name="onboarding_app_get_started">Get started</string>

    <!-- Player -->
    <string name="player_sheet_h2_station_metadata">Currently playing</string>
    <string name="player_sheet_h2_stream_url">Streaming link</string>

    <!-- Settings -->
    <string name="pref_advanced_title">Advanced</string>
    <string name="pref_app_version_summary">Version</string>
    <string name="pref_app_version_title">App Version</string>
    <string name="pref_backup_import_export_title">Import &amp; Export</string>
    <string name="pref_buffer_size_summary_disabled">Using the default buffer size for playing a radio stream.</string>
    <string name="pref_buffer_size_summary_enabled">Larger buffer for playing a radio stream enabled. It may take longer for the playback to start.</string>
    <string name="pref_buffer_size_title">Use Larger Buffer</string>
    <string name="pref_codeberg_title" translatable="false">Codeberg</string>
    <string name="pref_codeberg_summary" translatable="false">codeberg.org/y20k/transistor</string>
    <string name="pref_edit_station_stream_summary_disabled">Editing of streaming links disabled. </string>
    <string name="pref_edit_station_stream_summary_enabled">Editing of streaming links enabled. Make sure to enter a correct stream address.</string>
    <string name="pref_edit_station_stream_title">Edit Streaming Links</string>
    <string name="pref_edit_station_summary_disabled">Editing of station information disabled.</string>
    <string name="pref_edit_station_summary_enabled">Editing of station information enabled. Use long press to enter edit mode.</string>
    <string name="pref_edit_station_title">Edit Stations</string>
    <string name="pref_general_title">General</string>
    <string name="pref_github_title" translatable="false">GitHub</string>
    <string name="pref_github_summary" translatable="false">github.com/jamal2362/URL-Radio</string>
    <string name="pref_license_title">This application is open source</string>
    <string name="pref_license_summary">Licensed under the MIT License</string>
    <string name="pref_links_title">Links</string>
    <string name="pref_m3u_export_summary">Save your radio stations to an M3U playlist file that can be imported into other players.</string>
    <string name="pref_m3u_export_title">Export M3U</string>
    <string name="pref_maintenance_title">Maintenance</string>
    <string name="pref_pls_export_summary">Save your radio stations to an PLS playlist file that can be imported into other players.</string>
    <string name="pref_pls_export_title">Export PLS</string>
    <string name="pref_station_export_summary">Save entire collections of radio stations including images to device storage.</string>
    <string name="pref_station_export_title">Export Stations</string>
    <string name="pref_station_restore_summary">Restore collections of radio stations from backup. Existing stations will be replaced.</string>
    <string name="pref_station_restore_title">Restore Stations</string>
    <string name="pref_theme_selection_mode_dark">Dark mode</string>
    <string name="pref_theme_selection_mode_device_default">Same as device</string>
    <string name="pref_theme_selection_mode_light">Light mode</string>
    <string name="pref_theme_selection_summary">Current theme:</string>
    <string name="pref_theme_selection_title">App Theme</string>
    <string name="pref_update_station_images_summary">Download latest version of all station images.</string>
    <string name="pref_update_station_images_title">Update Station Images</string>

    <!-- Sample Text -->
    <string name="sample_text_sleep_timer_remaining_time" translatable="false">00:00</string>
    <string name="sample_text_station_metadata" translatable="false">Future - Mask Off</string>
    <string name="sample_text_station_name" translatable="false">bigFM Deutschland</string>
    <string name="sample_text_steam_url" translatable="false">https://streams.bigfm.de/bigfm-deutschland-128-mp3</string>
    <string name="sample_text_steam_bitrate" translatable="false">MP3 | 128kbps</string>

    <string name="toastalert_failed_picking_media">Image selection failed.</string>

    <!-- Toasts -->
    <string name="toastmessage_backed_up">has been successfully backed up.</string>
    <string name="toastmessage_connection_failed">The connection could not be established or restored.</string>
    <string name="toastmessage_copied_to_clipboard">Copied to clipboard.</string>
    <string name="toastmessage_error_download_error">Download error</string>
    <string name="toastmessage_error_restart_playback_failed">Unable to start or restart playback.</string>
    <string name="toastmessage_install_file_helper">Please install a file manager.</string>
    <string name="toastmessage_preview_playback_failed">Preview playback not possible.</string>
    <string name="toastmessage_preview_playback_started">Preview playback was started.</string>
    <string name="toastmessage_restored">Stations has been successfully restored.</string>
    <string name="toastmessage_save_m3u">Saving radio stations as M3U…</string>
    <string name="toastmessage_save_pls">Saving radio stations as PLS…</string>
    <string name="toastmessage_shortcut_created">Shortcut created.</string>
    <string name="toastmessage_shortcut_not_created">Shortcut not created. This device does not allow the creation of shortcuts.</string>
    <string name="toastmessage_sleep_timer_unable_to_start">Please start playback first.</string>
    <string name="toastmessage_station_duplicate">This station is a duplicate.</string>
    <string name="toastmessage_station_not_valid">Station is not valid.</string>
    <string name="toastmessage_updating_collection">Updating collections of stations.</string>
    <string name="toastmessage_updating_station_images">Updating station images.</string>

    <!-- Snackbars -->
    <string name="snackbar_show">Show</string>
    <string name="snackbar_update_available">is available!</string>
    <string name="snackbar_url_app_home_page" translatable="false">https://github.com/jamal2362/URL-Radio/releases/latest</string>
    <string name="snackbar_github_update_check_url" translatable="false">https://api.github.com/repos/jamal2362/URL-Radio/releases/latest</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="search_here">Search here...</string>


</resources>