<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.vimal.margh.fragment.FragmentHome"
        android:label="@string/home"
        tools:layout="@layout/fragment_recycler" />


    <fragment
        android:id="@+id/navigation_category"
        android:name="com.vimal.margh.fragment.FragmentCategory"
        android:label="@string/category"
        tools:layout="@layout/fragment_recycler" />


    <fragment
        android:id="@+id/fragment_play"
        android:name="com.vimal.margh.fragment.FragmentDetail"
        android:label="fragment_play"
        tools:layout="@layout/fragment_detail" />


    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.vimal.margh.fragment.FragmentFavorite"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_recycler" />

</navigation>