<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_bottom_sheet"
    app:behavior_hideable="true"
    app:behavior_peekHeight="60dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:id="@+id/drag_handle_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="32dp"
            android:layout_height="4dp"
            android:layout_margin="16dp"
            android:background="@drawable/bg_rounded_corner" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyt_collapse_color"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btn_favorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drag_handle_view">

        <RelativeLayout
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/sheet_radio_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_artwork"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Image.Rounded" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sheet_radio_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/app_name"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sheet_category_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:freezesText="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/app_name"
                android:textColor="?android:attr/textColorTertiary"
                android:textSize="13sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_favorite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="16dp"
        android:paddingRight="20dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lyt_collapse_color">

        <ImageView
            android:id="@+id/img_favorite"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/favorite_border" />

        <TextView
            android:id="@+id/txt_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:text="@string/favorites_add"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_share"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="16dp"
        android:paddingRight="20dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_report"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_favorite">

        <ImageView
            android:id="@+id/img_share"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_share" />

        <TextView
            android:id="@+id/txt_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:text="@string/menu_share"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_report"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="16dp"
        android:paddingRight="20dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_share">

        <ImageView
            android:id="@+id/img_report"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/report" />

        <TextView
            android:id="@+id/txt_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:text="@string/menu_report"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
